# detectionx

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.yaml  setup.sh
cmake/: dependence.cmake  dependencies.cmake  toolchain-aarch64.cmake  toolchain-armhf.cmake
include/: config.h  pipeline.h
src/: CMakeLists.txt  config.cpp  main.cpp  pipeline.cpp  pipeline.h
tests/jetson/: test_on_jetson.cpp
tests/rk3588/: test_on_rk3588.cpp
